tests/e2e/testdata/compiled-cases/input-validation/stacks/invalid/pattern.ub
stack: {
  state: local {
    path: '.unobin/state'
  }

  encryption: noop {}

  factory: {
    inputs: {
      required-name: 'web'
      cluster-name: 'Web-Prod'
    }
  }
}
